// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createJob no baseline 1`] = `
Object {
  "insights": Object {
    "webpack": Object {
      "assetsSizeTotal": Object {
        "data": Object {
          "info": Object {
            "delta": 63000,
            "deltaPercentage": 100,
            "deltaType": "HIGH_NEGATIVE",
            "displayDelta": "+63KB",
            "displayDeltaPercentage": "+100%",
            "displayValue": "63KB",
            "value": 63000,
          },
          "md": "*Bundle Size* — *63KB* (*+100%*).",
          "text": "Bundle Size — 63KB (+100%).",
        },
        "type": "INFO",
      },
      "duplicatePackages": Object {
        "data": Object {
          "package-c": Array [
            "package-a:package-c",
            "package-c",
          ],
        },
        "type": "WARNING",
      },
    },
  },
  "meta": Object {
    "webpack": Object {
      "builtAt": "2019-01-01T00:00:00.000Z",
      "chunks": Array [
        Object {
          "id": "1",
          "name": "main",
        },
      ],
      "hash": "abcd1234",
    },
  },
  "metrics": Object {
    "webpack": Object {
      "assetCount": Object {
        "value": 4,
      },
      "assets": Object {
        "index.html": Object {
          "isChunk": false,
          "isEntry": false,
          "isInitial": false,
          "name": "index.html",
          "value": 2000,
        },
        "logo.png": Object {
          "isChunk": false,
          "isEntry": false,
          "isInitial": false,
          "name": "logo.a3b4c5d.png",
          "value": 1000,
        },
        "main.css": Object {
          "chunkId": "1",
          "isChunk": true,
          "isEntry": true,
          "isInitial": true,
          "name": "main.a1b2c3d.css",
          "value": 10000,
        },
        "main.js": Object {
          "chunkId": "1",
          "isChunk": true,
          "isEntry": true,
          "isInitial": true,
          "name": "main.a2b3c4d.js",
          "value": 50000,
        },
      },
      "cacheInvalidation": Object {
        "value": 0,
      },
      "chunkCount": Object {
        "value": 2,
      },
      "duplicateCode": Object {
        "value": 0,
      },
      "duplicateModulesCount": Object {
        "value": 0,
      },
      "duplicatePackagesCount": Object {
        "value": 1,
      },
      "moduleCount": Object {
        "value": 6,
      },
      "modules": Object {
        "module-a": Object {
          "chunkIds": Array [
            "1",
          ],
          "duplicated": false,
          "name": "module-a",
          "value": 1000,
        },
        "module-b": Object {
          "chunkIds": Array [
            "1",
          ],
          "duplicated": false,
          "name": "module-b",
          "value": 2000,
        },
        "node_modules/package-a/index.js": Object {
          "chunkIds": Array [
            "1",
          ],
          "duplicated": false,
          "name": "node_modules/package-a/index.js",
          "value": 1000,
        },
        "node_modules/package-a/node_modules/package-c/index.js": Object {
          "chunkIds": Array [
            "1",
          ],
          "duplicated": false,
          "name": "node_modules/package-a/node_modules/package-c/index.js",
          "value": 1000,
        },
        "node_modules/package-b/index.js": Object {
          "chunkIds": Array [
            "1",
          ],
          "duplicated": false,
          "name": "node_modules/package-b/index.js",
          "value": 1000,
        },
        "node_modules/package-c/index.js": Object {
          "chunkIds": Array [
            "1",
          ],
          "duplicated": false,
          "name": "node_modules/package-c/index.js",
          "value": 1000,
        },
      },
      "packageCount": Object {
        "value": 4,
      },
      "packages": Object {
        "package-a": Object {
          "name": "package-a",
          "path": "node_modules/package-a",
          "value": 1000,
        },
        "package-a:package-c": Object {
          "name": "package-c",
          "path": "node_modules/package-a/node_modules/package-c",
          "value": 1000,
        },
        "package-b": Object {
          "name": "package-b",
          "path": "node_modules/package-b",
          "value": 1000,
        },
        "package-c": Object {
          "name": "package-c",
          "path": "node_modules/package-c",
          "value": 1000,
        },
      },
      "sizes": Object {
        "totalSizeByTypeCSS": Object {
          "value": 10000,
        },
        "totalSizeByTypeFONT": Object {
          "value": 0,
        },
        "totalSizeByTypeHTML": Object {
          "value": 2000,
        },
        "totalSizeByTypeIMG": Object {
          "value": 1000,
        },
        "totalSizeByTypeJS": Object {
          "value": 50000,
        },
        "totalSizeByTypeMEDIA": Object {
          "value": 0,
        },
        "totalSizeByTypeOTHER": Object {
          "value": 0,
        },
      },
      "totalInitialSizeCSS": Object {
        "value": 10000,
      },
      "totalInitialSizeJS": Object {
        "value": 50000,
      },
      "totalSizeByTypeALL": Object {
        "value": 63000,
      },
    },
  },
  "rawData": Object {
    "webpack": Object {
      "assets": Array [
        Object {
          "name": "main.a1b2c3d.css",
          "size": 10000,
        },
        Object {
          "name": "main.a2b3c4d.js",
          "size": 50000,
        },
        Object {
          "name": "logo.a3b4c5d.png",
          "size": 1000,
        },
        Object {
          "name": "index.html",
          "size": 2000,
        },
      ],
      "builtAt": 1546300800000,
      "chunks": Array [
        Object {
          "entry": true,
          "files": Array [
            "main.a1b2c3d.css",
            "main.a2b3c4d.js",
          ],
          "id": 1,
          "initial": true,
          "names": Array [
            "main",
          ],
        },
      ],
      "hash": "abcd1234",
      "modules": Array [
        Object {
          "chunks": Array [
            1,
          ],
          "name": "module-a",
          "size": 1000,
        },
        Object {
          "chunks": Array [
            1,
          ],
          "name": "module-b",
          "size": 2000,
        },
        Object {
          "chunks": Array [],
          "name": "module-c",
          "size": 1000,
        },
        Object {
          "chunks": Array [
            1,
          ],
          "name": "node_modules/package-a/index.js",
          "size": 1000,
        },
        Object {
          "chunks": Array [
            1,
          ],
          "name": "node_modules/package-a/node_modules/package-c/index.js",
          "size": 1000,
        },
        Object {
          "chunks": Array [
            1,
          ],
          "name": "node_modules/package-b/index.js",
          "size": 1000,
        },
        Object {
          "chunks": Array [
            1,
          ],
          "name": "node_modules/package-c/index.js",
          "size": 1000,
        },
      ],
    },
  },
  "summary": Object {
    "webpack": Object {
      "assetCount": Object {
        "baseline": 0,
        "current": 4,
      },
      "cacheInvalidation": Object {
        "baseline": 0,
        "current": 0,
      },
      "chunkCount": Object {
        "baseline": 0,
        "current": 2,
      },
      "duplicateCode": Object {
        "baseline": 0,
        "current": 0,
      },
      "duplicateModulesCount": Object {
        "baseline": 0,
        "current": 0,
      },
      "duplicatePackagesCount": Object {
        "baseline": 0,
        "current": 1,
      },
      "moduleCount": Object {
        "baseline": 0,
        "current": 6,
      },
      "packageCount": Object {
        "baseline": 0,
        "current": 4,
      },
      "totalInitialSizeCSS": Object {
        "baseline": 0,
        "current": 10000,
      },
      "totalInitialSizeJS": Object {
        "baseline": 0,
        "current": 50000,
      },
      "totalSizeByTypeALL": Object {
        "baseline": 0,
        "current": 63000,
      },
    },
  },
}
`;

exports[`createJob with baseline 1`] = `
Object {
  "insights": Object {
    "webpack": Object {
      "assetsSizeTotal": Object {
        "data": Object {
          "info": Object {
            "delta": 0,
            "deltaPercentage": 0,
            "deltaType": "NO_CHANGE",
            "displayDelta": "0B",
            "displayDeltaPercentage": "0%",
            "displayValue": "63KB",
            "value": 63000,
          },
          "md": "*Bundle Size* — *63KB* (*0%*).",
          "text": "Bundle Size — 63KB (0%).",
        },
        "type": "INFO",
      },
      "duplicatePackages": Object {
        "data": Object {
          "package-c": Array [
            "package-a:package-c",
            "package-c",
          ],
        },
        "type": "WARNING",
      },
    },
  },
  "meta": Object {
    "webpack": Object {
      "builtAt": "2019-01-01T00:00:00.000Z",
      "chunks": Array [
        Object {
          "id": "1",
          "name": "main",
        },
      ],
      "hash": "abcd1234",
    },
  },
  "metrics": Object {
    "webpack": Object {
      "assetCount": Object {
        "value": 4,
      },
      "assets": Object {
        "index.html": Object {
          "isChunk": false,
          "isEntry": false,
          "isInitial": false,
          "name": "index.html",
          "value": 2000,
        },
        "logo.png": Object {
          "isChunk": false,
          "isEntry": false,
          "isInitial": false,
          "name": "logo.a3b4c5d.png",
          "value": 1000,
        },
        "main.css": Object {
          "chunkId": "1",
          "isChunk": true,
          "isEntry": true,
          "isInitial": true,
          "name": "main.a1b2c3d.css",
          "value": 10000,
        },
        "main.js": Object {
          "chunkId": "1",
          "isChunk": true,
          "isEntry": true,
          "isInitial": true,
          "name": "main.a2b3c4d.js",
          "value": 50000,
        },
      },
      "cacheInvalidation": Object {
        "value": 95.24,
      },
      "chunkCount": Object {
        "value": 2,
      },
      "duplicateCode": Object {
        "value": 0,
      },
      "duplicateModulesCount": Object {
        "value": 0,
      },
      "duplicatePackagesCount": Object {
        "value": 1,
      },
      "moduleCount": Object {
        "value": 6,
      },
      "modules": Object {
        "module-a": Object {
          "chunkIds": Array [
            "1",
          ],
          "duplicated": false,
          "name": "module-a",
          "value": 1000,
        },
        "module-b": Object {
          "chunkIds": Array [
            "1",
          ],
          "duplicated": false,
          "name": "module-b",
          "value": 2000,
        },
        "node_modules/package-a/index.js": Object {
          "chunkIds": Array [
            "1",
          ],
          "duplicated": false,
          "name": "node_modules/package-a/index.js",
          "value": 1000,
        },
        "node_modules/package-a/node_modules/package-c/index.js": Object {
          "chunkIds": Array [
            "1",
          ],
          "duplicated": false,
          "name": "node_modules/package-a/node_modules/package-c/index.js",
          "value": 1000,
        },
        "node_modules/package-b/index.js": Object {
          "chunkIds": Array [
            "1",
          ],
          "duplicated": false,
          "name": "node_modules/package-b/index.js",
          "value": 1000,
        },
        "node_modules/package-c/index.js": Object {
          "chunkIds": Array [
            "1",
          ],
          "duplicated": false,
          "name": "node_modules/package-c/index.js",
          "value": 1000,
        },
      },
      "packageCount": Object {
        "value": 4,
      },
      "packages": Object {
        "package-a": Object {
          "name": "package-a",
          "path": "node_modules/package-a",
          "value": 1000,
        },
        "package-a:package-c": Object {
          "name": "package-c",
          "path": "node_modules/package-a/node_modules/package-c",
          "value": 1000,
        },
        "package-b": Object {
          "name": "package-b",
          "path": "node_modules/package-b",
          "value": 1000,
        },
        "package-c": Object {
          "name": "package-c",
          "path": "node_modules/package-c",
          "value": 1000,
        },
      },
      "sizes": Object {
        "totalSizeByTypeCSS": Object {
          "value": 10000,
        },
        "totalSizeByTypeFONT": Object {
          "value": 0,
        },
        "totalSizeByTypeHTML": Object {
          "value": 2000,
        },
        "totalSizeByTypeIMG": Object {
          "value": 1000,
        },
        "totalSizeByTypeJS": Object {
          "value": 50000,
        },
        "totalSizeByTypeMEDIA": Object {
          "value": 0,
        },
        "totalSizeByTypeOTHER": Object {
          "value": 0,
        },
      },
      "totalInitialSizeCSS": Object {
        "value": 10000,
      },
      "totalInitialSizeJS": Object {
        "value": 50000,
      },
      "totalSizeByTypeALL": Object {
        "value": 63000,
      },
    },
  },
  "rawData": Object {
    "webpack": Object {
      "assets": Array [
        Object {
          "name": "main.a1b2c3d.css",
          "size": 10000,
        },
        Object {
          "name": "main.a2b3c4d.js",
          "size": 50000,
        },
        Object {
          "name": "logo.a3b4c5d.png",
          "size": 1000,
        },
        Object {
          "name": "index.html",
          "size": 2000,
        },
      ],
      "builtAt": 1546300800000,
      "chunks": Array [
        Object {
          "entry": true,
          "files": Array [
            "main.a1b2c3d.css",
            "main.a2b3c4d.js",
          ],
          "id": 1,
          "initial": true,
          "names": Array [
            "main",
          ],
        },
      ],
      "hash": "abcd1234",
      "modules": Array [
        Object {
          "chunks": Array [
            1,
          ],
          "name": "module-a",
          "size": 1000,
        },
        Object {
          "chunks": Array [
            1,
          ],
          "name": "module-b",
          "size": 2000,
        },
        Object {
          "chunks": Array [],
          "name": "module-c",
          "size": 1000,
        },
        Object {
          "chunks": Array [
            1,
          ],
          "name": "node_modules/package-a/index.js",
          "size": 1000,
        },
        Object {
          "chunks": Array [
            1,
          ],
          "name": "node_modules/package-a/node_modules/package-c/index.js",
          "size": 1000,
        },
        Object {
          "chunks": Array [
            1,
          ],
          "name": "node_modules/package-b/index.js",
          "size": 1000,
        },
        Object {
          "chunks": Array [
            1,
          ],
          "name": "node_modules/package-c/index.js",
          "size": 1000,
        },
      ],
    },
  },
  "summary": Object {
    "webpack": Object {
      "assetCount": Object {
        "baseline": 4,
        "current": 4,
      },
      "cacheInvalidation": Object {
        "baseline": 0,
        "current": 95.24,
      },
      "chunkCount": Object {
        "baseline": 2,
        "current": 2,
      },
      "duplicateCode": Object {
        "baseline": 0,
        "current": 0,
      },
      "duplicateModulesCount": Object {
        "baseline": 0,
        "current": 0,
      },
      "duplicatePackagesCount": Object {
        "baseline": 0,
        "current": 1,
      },
      "moduleCount": Object {
        "baseline": 5,
        "current": 6,
      },
      "packageCount": Object {
        "baseline": 3,
        "current": 4,
      },
      "totalInitialSizeCSS": Object {
        "baseline": 11000,
        "current": 10000,
      },
      "totalInitialSizeJS": Object {
        "baseline": 49000,
        "current": 50000,
      },
      "totalSizeByTypeALL": Object {
        "baseline": 63000,
        "current": 63000,
      },
    },
  },
}
`;
